k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: “nginx”
    ingress.kubernetes.io/rewrite-target: /
    ingressclass.kubernetes.io/is-default-class: “true”
spec:
  rules:
  - host: frontend.211.252.87.34.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: employee-frontend
            port:
              number: 80
